1999-09-14  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* server-src/reporter.c (sDivZero): Change from float to double, to
	build with DEC cc.

	* configure.in: Get snapshot date from SNAPSHOT file, if it exists.
	(VERSION): Add the date to it.
	(SNAPSHOT_STAMP): AC_SUBST to the SNAPSHOT file, if it exists.
	* Makefile.am (EXTRA_DIST): Added $(SNAPSHOT_STAMP).
	(config.status): Depend on $(SNAPSHOT_STAMP).
	(SNAPSHOT): Dummy rule to allow reconfigure if it's removed.

	* config/Makefile.am: Remove all traces of acconfig.h.

	* server-src/changer.c (changer_command): Fix for amwait_t != int.

1999-09-13  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* config/acinclude.m4i: Added comments for config/config.h.in to all
	AC_DEFINEs.
	* configure.in: Likewise.
	* config/acconfig.h: Deleted.
	* autogen: Updated.

1999-09-05 John R. Jackson  <jrj@purdue.edu>

	* changer-src/chg-chio.pl.in: add -w to #! line to catch more errors.
	* recover-src/display_commands.c: fix some compiler warnings.
	* recover-src/extract_list.c: fix some compiler warnings.
	* restore-src/amrestore.c: fix some compiler warnings.
	* server-src/planner.c: fix some compiler warnings.

1999-09-05 John R. Jackson  <jrj@purdue.edu>

	* recover-src/extract_list.c: add VRESTORE and VXRESTORE support.

1999-09-05 John R. Jackson  <jrj@purdue.edu>

	* common-src/stream.c: make sure errno is returned properly from
	  stream_client() and stream_server().
	* server-src/taper.c: report errors from stream_server() and
	  abort.
	* recover-src/extract_list.c: make sure errno is preserved.

1999-09-05 John R. Jackson  <jrj@purdue.edu>

	* configure.in: make sure the dump and restore programs are defined
	  in pairs, do not allow just the dump program without restore.
	* client-src/sendbackup-dump.c: assume restore program is present
	  if dump program is.
	* common-src/genversion.c: assume restore program is present if
	  dump program is.

1999-09-05 John R. Jackson  <jrj@purdue.edu>
