@@ -24,7 +24,7 @@
  * file named AUTHORS, in the root directory of this distribution.
  */
 /*
- * $Id: krb5-security.c,v 1.2 1999/04/16 05:13:01 kashmir Exp $
+ * $Id: krb5-security.c,v 1.3 1999/09/14 06:45:39 oliva Exp $
  *
  * Stub file that pulls in the krb5 module from the export-restricted
  * tree.
@@ -33,4 +33,6 @@
 #include "config.h"
 #ifdef KRB5_SECURITY
 #include "../../amanda-krb-2/common-src/krb5-security.c"
+#else
+static int dummy () {}
 #endif
